# sve-personal-website

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .mise.toml  .mise.toml.license  .pre-commit-config.yaml  .prettierrc.yaml  .rumdl.toml  .tool-versions  .trivyignore.yaml  .vale.ini  .yamllint.yaml  .yamllint.yml  LICENSE.md  README.md  REUSE.toml  Taskfile.yaml  Taskfile.yml  go.mod  go.sum  hugo.just  justfile  pre-commit.just  prek.toml  project.just  pyproject.toml  trivy.yaml
.devcontainer/: bootstrap.sh  devcontainer.dockerfile  devcontainer.env  devcontainer.json  install-just.sh  install-trivy.sh
.github/: dependabot.yml
.reuse/: dep5
.tasks/hugo/: Taskfile.yml
.tasks/project/: Taskfile.yaml
archetypes/: default.md
config/_default/: config.toml  languages.en.toml  markup.toml  menus.en.toml  params.toml
content/articles/: ado-team-calendar.md  aerynos-desktop-setup.md  buildah-gitlab.md  copier-templates.md  copier.md  eks-auto-mode.md  fedora-workstation-setup.md  gitlab-ci-local.md  gitlab-dynamic-pipelines.md  helmfile.md  jupyter-notebooks.md  just-task-runner.md  kubernetes-flux.md  kubernetes-helmfile.md  kubernetes-success.md  mac-setup.md  maintainable-yaml.md  markdown-maintenance.md  mise-en-place.md  modern-data-file-formats.md  modern-markdown.md  prek-containers.md  python-modern-practices.md  python-modern-scripts-pep723.md  python-project-setup.md  python-semantic-release-gitlab.md  rumdl-markdown-maintenance.md  serpent-os-desktop-setup.md  serpent-os-why.md  task-runner.md  (+8 more)
scripts/: install-just.sh
tasks/: README.md
(+16 files in other folders)
