# SPDX-FileCopyrightText: 2024-present Stuart Ellis <stuart@stuartellis.name>
#
# SPDX-License-Identifier: MIT
#

[project]
name = "sje-personal-website"
version = "2024.03.16"
description = "Personal Website for Stuart Ellis"
authors = ["Stuart Ellis <stuart@stuartellis.name>"]
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://www.stuartellis.name"
Documentation = "https://github.com/stuartellis/sje-personal-website"
Repository = "https://github.com/stuartellis/sje-personal-website"

[tool.project.utilities]
hugo = "0.122.0"
just = "1.25.2"
pre-commit = "3.6.2"
trivy = "0.49.1"
